--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -23,6 +23,8 @@ tasks:
     cmds:
     - powershell -File scripts-setup.ps1
   powershell-extension-for-vscode:
+    deps:
+    - vscode-install
     cmds:
     - powershell -File powershell-extension-for-vscode.ps1
     status:
